--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,21 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/styles.css">
     <!-- UIkit CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.14/css/uikit.min.css" />
+    <link href="https://fonts.googleapis.com/css?family=Allerta+Stencil|Baloo|Berkshire+Swash|Bungee+Shade|Cabin+Sketch|Covered+By+Your+Grace|Damion|Fredericka+the+Great|Gaegu|Gochi+Hand|Hind|Homemade+Apple|Just+Me+Again+Down+Here|Knewave|Kosugi+Maru|Kurale|Lato|League+Script|Londrina+Outline|Love+Ya+Like+A+Sister|M+PLUS+Rounded+1c|McLaren|Mukta|Nanum+Brush+Script|Neucha|Nothing+You+Could+Do|Noto+Sans|Nunito|Oleo+Script|Overlock+SC|PT+Sans|Quicksand|Raleway|Reenie+Beanie|Roboto|Roboto+Condensed|Source+Sans+Pro|Special+Elite|Ubuntu|Ultra|Wendy+One|Yellowtail|Zeyada" rel="stylesheet">
+
+
 
     <!-- UIkit JS -->
+
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.14/js/uikit.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.14/js/uikit-icons.min.js"></script>
 
+
 </head>
 
 <body>
     {{{body}}}
+    <div id="fb-root"></div>
+    <script>(function (d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) return;
+            js = d.createElement(s); js.id = id;
+            js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.1&appId=859826360873812&autoLogAppEvents=1';
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));</script>
 </body>
 
 </html>
