--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -27,10 +27,10 @@
     <br>
 
 
-<div class = 'editchandlers'> 
-<button id="editComplete">Change your data!</button>
-    <button id="destroyComplete">Delete your post!</button>
-</div>
+
+<button class = 'editchandlers' id="editComplete">Change your data!</button>
+    <button class = 'editchandlers' id="destroyComplete">Delete your post!</button>
+
     
 
 </div>
